--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,22 +1,38 @@
-font_family JetBrains Mono
-font_features JetBrainsMono-Regular +zero
-font_features JetBrainsMono-Bold +zero
-font_features JetBrainsMono-Italic +zero
-font_features JetBrainsMono-BoldItalic +zero
-font_size 16.0
-
+font_family Fira Code
+font_size 15
 disable_ligatures cursor
 
-tab_bar_style powerline
-tab_powerline_style slanted
+placement_strategy top-left
 
-sync_to_monitor no
+tab_bar_edge top
+tab_title_template "{index}:{title}"
 
-update_check_interval 0
+mouse_hide_wait 0
+
+enabled_layouts fat, tall
 
 map ctrl+shift+left neighboring_window left
 map ctrl+shift+right neighboring_window right
 map ctrl+shift+down neighboring_window down
 map ctrl+shift+up neighboring_window up
 
-include ./Catppuccin-Mocha.conf
+map alt+enter toggle_fullscreen
+
+map ctrl+plus change_font_size all +2.0
+map ctrl+minus change_font_size all -2.0
+map ctrl+0 change_font_size all 0
+
+map alt+1 goto_tab 1
+map alt+2 goto_tab 2
+map alt+3 goto_tab 3
+map alt+4 goto_tab 4
+map alt+5 goto_tab 5
+map alt+6 goto_tab 6
+map alt+7 goto_tab 7
+map alt+8 goto_tab 8
+map alt+9 goto_tab 9
+
+map ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+enter new_window_with_cwd
+
+include ./Kanawaga-Wave.conf
