Update kitty keymaps

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,10 +11,18 @@ mouse_hide_wait 0
 
 enabled_layouts fat, tall
 
+map ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+enter new_window_with_cwd
+
 map ctrl+shift+left neighboring_window left
 map ctrl+shift+right neighboring_window right
 map ctrl+shift+down neighboring_window down
 map ctrl+shift+up neighboring_window up
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
 
 map alt+enter toggle_fullscreen
 
@@ -31,8 +39,5 @@ map alt+6 goto_tab 6
 map alt+7 goto_tab 7
 map alt+8 goto_tab 8
 map alt+9 goto_tab 9
-
-map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+enter new_window_with_cwd
 
 include ./Kanawaga-Wave.conf
