Update kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,6 +11,8 @@ mouse_hide_wait 0
 
 enabled_layouts fat, tall
 
+mouse_map alt+left press ungrabbed mouse_selection rectangle
+
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
 
