--- a/config/starship.toml
+++ b/config/starship.toml
@@ -4,17 +4,14 @@
 add_newline = false
 
 format = """
-$username\
 $directory\
 $git_branch\
 $git_commit\
 $git_state\
-$git_metrics\
 $git_status\
-$conda\
 $cmd_duration\
-$line_break\
 $jobs\
+$line_break\
 $character"""
 
 [character]
@@ -29,6 +26,6 @@ vimcmd_visual_symbol = '[<](bold yellow)'
 read_only = ' 󰌾'
 truncation_length = 0
 
-[conda]
-symbol = ''
-format = '[\($environment\)]($style) '
+[git_commit]
+tag_disabled = false
+tag_symbol = '  '
