Update mpv config

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,5 +1,6 @@
 # LENGUAJE ---------------------------------------------------------------------
 alang=ja,jp,jpn,en,eng,spa
+slang=spa,eng
 
 # REPRODUCTOR ------------------------------------------------------------------
 keep-open=yes
@@ -19,6 +20,3 @@ deband-iterations=4
 video-sync=display-resample
 interpolation=yes
 tscale=oversample
-
-# scale=lanczos
-glsl-shader=~~/shaders/ravu-zoom-ar-r3.hook
