--- a/config/kitty/Catppuccin-Mocha.conf
+++ b/config/kitty/Catppuccin-Mocha.conf
@@ -1,9 +1,9 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Mocha
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Catppuccin Kitty Mocha
+## author:   Catppuccin Org
 ## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
 
@@ -11,11 +11,11 @@
 # The basic colors
 foreground              #CDD6F4
 background              #1E1E2E
-selection_foreground    #CDD6F4
-selection_background    #505268
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
 # Cursor colors
-cursor                  #CDD6F4
+cursor                  #F5E0DC
 cursor_text_color       #1E1E2E
 
 # URL underline color when hovering with mouse
@@ -27,14 +27,14 @@ inactive_border_color   #6C7086
 bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
-wayland_titlebar_color #11111B
-macos_titlebar_color system
+wayland_titlebar_color  #11111B
+macos_titlebar_color    #11111B
 
 # Tab bar colors
 active_tab_foreground   #11111B
 active_tab_background   #CBA6F7
 inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
+inactive_tab_background #11111B
 tab_bar_background      #11111B
 
 # Colors for marks (marked text in the terminal)
