--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+shell fish
+
 font_family Fira Code
 font_size 15
 disable_ligatures cursor
@@ -7,11 +9,12 @@ placement_strategy top-left
 tab_bar_edge top
 tab_title_template "{index}:{title}"
 
+tab_bar_style powerline
+tab_powerline_style slanted
+
 mouse_hide_wait 0
 
 enabled_layouts fat, tall
-
-mouse_map alt+left press ungrabbed mouse_selection rectangle
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
@@ -25,8 +28,6 @@ map shift+up move_window up
 map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
-
-map alt+enter toggle_fullscreen
 
 map ctrl+plus change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
@@ -42,4 +43,6 @@ map alt+7 goto_tab 7
 map alt+8 goto_tab 8
 map alt+9 goto_tab 9
 
-include ./Kanawaga-Wave.conf
+mouse_map alt+left press ungrabbed mouse_selection rectangle
+
+include ./Catppuccin-Mocha.conf
