Update kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,16 +1,14 @@
 shell fish
 
+disable_ligatures cursor
 font_family Fira Code
 font_size 15
-disable_ligatures cursor
 
-placement_strategy top-left
-
+tab_bar_align center
 tab_bar_edge top
+tab_bar_style slant
 tab_title_template "{index}:{title}"
-
-tab_bar_style powerline
-tab_powerline_style slanted
+tab_switch_strategy right
 
 mouse_hide_wait 0
 
