--- a/config/kitty/Catppuccin-Mocha.conf
+++ b/config/kitty/Catppuccin-Mocha.conf
@@ -27,15 +27,16 @@ inactive_border_color   #6C7086
 bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
-wayland_titlebar_color  #11111B
-macos_titlebar_color    #11111B
+wayland_titlebar_color  #11111b
+macos_titlebar_color    #11111b
 
 # Tab bar colors
 active_tab_foreground   #11111B
 active_tab_background   #CBA6F7
 inactive_tab_foreground #CDD6F4
-inactive_tab_background #11111B
+inactive_tab_background #181825
 tab_bar_background      #11111B
+tab_bar_margin_color    #11111B
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
