--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,8 +1,9 @@
 shell fish
 
-disable_ligatures cursor
-font_family Fira Code
 font_size 15
+font_family Fira Code
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font
+disable_ligatures cursor
 
 tab_bar_align center
 tab_bar_edge top
@@ -10,30 +11,15 @@ tab_bar_style slant
 tab_title_template "{index}:{title}"
 tab_switch_strategy right
 
-mouse_hide_wait 0
-
 enabled_layouts fat, tall
-
-allow_remote_control socket-only
-listen_on unix:/tmp/kitty
-
-# kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten /home/warbacon/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
- 
-# Browse scrollback buffer in nvim
-map kitty_mod+h kitty_scrollback_nvim
-# Browse output of the last shell command in nvim
-map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
-# Show clicked command output in nvim
-mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
 
 map ctrl+shift+left neighboring_window left
 map ctrl+shift+right neighboring_window right
-map ctrl+shift+down neighboring_window down
-map ctrl+shift+up neighboring_window up
+map ctrl+shift+up neighboring_window down
+map ctrl+shift+down neighboring_window up
 
 map shift+up move_window up
 map shift+left move_window left
@@ -43,6 +29,10 @@ map shift+down move_window down
 map ctrl+plus change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
 map ctrl+0 change_font_size all 0
+
+map ctrl+shift+plus no_op
+map ctrl+shift+minus no_op
+map ctrl+shift+backspace no_op
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
