Update hyprland and waybar config

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Imágenes/Wallpapers/macos-big-sur.png
-wallpaper = eDP-1,~/Imágenes/Wallpapers/macos-big-sur.png
+preload = ~/Imágenes/sand.png
+wallpaper = eDP-1,~/Imágenes/sand.png
 splash = false
