--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,19 +6,20 @@ exec-once = waybar & hyprpaper & mako
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
-# Source a file (multi-file configs)
-source = ~/.config/hypr/mocha.conf
+# Sources
+source = ~/.config/hypr/imports/mocha.conf
 
 # Set programs that you use
-$terminal = kitty -1
+$terminal = kitty
 $fileManager = nautilus
 $menu = fuzzel
 
-# Some default env vars.
+# Some default env vars
 env = XCURSOR_SIZE,24
 env = GDK_SCALE,2
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+# Variables
+# See https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = es
 
@@ -37,8 +38,6 @@ device:logitech-m350-1 {
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 20
     border_size = 2
@@ -52,8 +51,6 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 10
     
     blur {
@@ -63,79 +60,81 @@ decoration {
     }
 
     drop_shadow = no
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
     enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    bezier = easeOutQuint, 0.19, 1, 0.22, 1
 
-    bezier = myBezier, 0.16, 1, 0.3, 1
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows, 1, 7, easeOutQuint, popin 40%
+    animation = windowsOut, 1, 7, easeOutQuint, popin 80%
+    animation = workspaces, 1, 6, easeOutQuint
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
     no_gaps_when_only = 1
+    new_on_top = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = on
+    workspace_swipe_cancel_ratio = 0.15
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     disable_splash_rendering = true
     disable_hyprland_logo = true
     force_default_wallpaper = 0
+    new_window_takes_over_fullscreen = 2
+}
+
+binds {
+    scroll_event_delay = 50
 }
 
 xwayland {
     force_zero_scaling = true
 }
 
+# Window Rules
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = center, class:.*
+windowrulev2 = nomaximizerequest, class:.*
+# windowrulev2 = center, class:.*
 
 # Mpv
 windowrulev2 = float, class:^(mpv)$
 
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Keybindings
+# See https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = SUPER, Q, exec, $terminal
 bind = SUPER, C, killactive, 
-bind = SUPER_SHIFT, Q, exit, 
 bind = SUPER, E, exec, $fileManager
 bind = SUPER, V, togglefloating, 
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
+bind = SUPER, P, exec, ~/.config/hypr/scripts/power_menu.sh
 
 # Master-Layout
 bind = SUPER, j, layoutmsg, cyclenext
 bind = SUPER, k, layoutmsg, cycleprev
 bind = SUPER_SHIFT, j, layoutmsg, swapnext
 bind = SUPER_SHIFT, k, layoutmsg, swapprev
-binde = SUPER, h, resizeactive, -40 0
-binde = SUPER, l, resizeactive, 40 0
-bind = SUPER_SHIFT, h, layoutmsg, swapwithmaster
+binde = SUPER, h, resizeactive, -50 0
+binde = SUPER, l, resizeactive, 50 0
+
+# Screenshot
+bind = , Print, exec, grim - | satty --fullscreen --copy-command wl-copy -f -
+bind = SHIFT, Print, exec, grim -g "$(slurp)" - | satty --copy-command wl-copy --filename -
 
 # Audio
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
 binde = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-binde = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-binde = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Backlight
 binde = , XF86MonBrightnessUp, exec, brightnessctl set +1%
@@ -170,8 +169,8 @@ bind = SUPER, S, togglespecialworkspace, magic
 bind = SUPER_SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = SUPER, mouse_down, workspace, e+1
-bind = SUPER, mouse_up, workspace, e-1
+bind = SUPER, mouse_down, workspace, e-1
+bind = SUPER, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
