--- a/config/waybar/config
+++ b/config/waybar/config
@@ -4,7 +4,7 @@
     "spacing": 4, // Gaps between modules (4px)
     "modules-left": ["hyprland/workspaces","hyprland/window"],
     "modules-center": [],
-    "modules-right": ["pulseaudio", "network", "backlight", "battery", "clock", "tray"],
+    "modules-right": ["pulseaudio", "backlight", "battery", "network", "clock", "tray"],
     // Modules configuration
     "hyprland/workspaces": {
         "disable-scroll": false,
@@ -15,13 +15,13 @@
     "clock": {
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format": " {:%H:%M}",
-        "format-alt": "{:%d-%m-%Y}"
+        "format-alt": " {:%d/%m/%Y}"
     },
     "battery": {
         "states": {
             // "good": 95,
             "warning": 30,
-            "critical": 15
+            "critical": 20
         },
         "format": "{icon} {capacity}%",
         "format-charging": "{capacity}% ",
@@ -41,10 +41,8 @@
     },
     "pulseaudio": {
         "format": "{icon} {volume}% {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": "󰝟 {icon} {format_source}",
         "format-muted": "󰝟 {format_source}",
-        "format-source": "{volume}% ",
+        "format-source": " {volume}%",
         "format-source-muted": "",
         "format-icons": {
             "headphone": "",
