Update kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,14 +1,19 @@
 shell fish
+shell_integration no-cursor
 
 font_size 15
 font_family Fira Code
-symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font
 disable_ligatures cursor
 
+remember_window_size no
+
+sync_to_monitor no
+input_delay 0
+
 tab_bar_align center
-tab_bar_edge top
-tab_bar_style slant
-tab_title_template "{index}:{title}"
+tab_bar_style separator
+tab_separator ""
+tab_title_template " {index}:{title} "
 tab_switch_strategy right
 
 enabled_layouts fat, tall
@@ -18,8 +23,8 @@ map ctrl+shift+enter new_window_with_cwd
 
 map ctrl+shift+left neighboring_window left
 map ctrl+shift+right neighboring_window right
-map ctrl+shift+up neighboring_window down
-map ctrl+shift+down neighboring_window up
+map ctrl+shift+down neighboring_window down
+map ctrl+shift+up neighboring_window up
 
 map shift+up move_window up
 map shift+left move_window left
@@ -43,6 +48,7 @@ map alt+6 goto_tab 6
 map alt+7 goto_tab 7
 map alt+8 goto_tab 8
 map alt+9 goto_tab 9
+map alt+0 goto_tab 10
 
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
