--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,43 +1,29 @@
 shell fish
-shell_integration no-cursor
 
-font_size 15
+font_size 14.5
 font_family Fira Code
 disable_ligatures cursor
+modify_font underline_thickness 150%
+undercurl_style thick-sparse
 
-remember_window_size no
+mouse_hide_wait 0
+strip_trailing_spaces smart
 
 sync_to_monitor no
-input_delay 0
+input_delay 1
 
 tab_bar_align center
 tab_bar_style separator
 tab_separator ""
-tab_title_template " {index}:{title} "
+tab_title_template "  {index}:{title}  "
 tab_switch_strategy right
 
-enabled_layouts fat, tall
-
+map ctrl+shift+enter no_op
 map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+enter new_window_with_cwd
-
-map ctrl+shift+left neighboring_window left
-map ctrl+shift+right neighboring_window right
-map ctrl+shift+down neighboring_window down
-map ctrl+shift+up neighboring_window up
-
-map shift+up move_window up
-map shift+left move_window left
-map shift+right move_window right
-map shift+down move_window down
 
 map ctrl+plus change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
 map ctrl+0 change_font_size all 0
-
-map ctrl+shift+plus no_op
-map ctrl+shift+minus no_op
-map ctrl+shift+backspace no_op
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
