Update kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,10 +1,8 @@
 shell fish
 
 font_size 14.5
-font_family Fira Code
+font_family JetBrains Mono
 disable_ligatures cursor
-modify_font underline_thickness 150%
-undercurl_style thick-sparse
 
 mouse_hide_wait 0
 strip_trailing_spaces smart
