Cleaning up things

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Imágenes/sand.png
-wallpaper = eDP-1,~/Imágenes/sand.png
+preload = ~/Imágenes/Wallpapers/nose.png
+wallpaper = eDP-1,~/Imágenes/Wallpapers/nose.png
 splash = false
