--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,7 +2,8 @@
 monitor=,preferred,auto,2
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & mako
+exec-once = hyprpaper & waybar
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
@@ -12,7 +13,7 @@ source = ~/.config/hypr/imports/mocha.conf
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = fuzzel
+$menu = rofi -show drun
 
 # Some default env vars
 env = XCURSOR_SIZE,24
@@ -33,16 +34,17 @@ input {
     }
 }
 
-device:logitech-m350-1 {
+device {
+    name = logitech-m350-1
     accel_profile = flat
 }
 
 general {
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
-    col.active_border = rgb($mauveAlpha)
-    col.inactive_border = rgb($surface1Alpha)
+    gaps_out = 10
+    border_size = 1
+    col.active_border = rgb($maroonAlpha)
+    col.inactive_border = rgb($surface0Alpha)
 
     layout = master
 
@@ -52,25 +54,26 @@ general {
 
 decoration {
     rounding = 10
-    
+
     blur {
-        enabled = false
-        size = 3
-        passes = 1
+        enabled = no
     }
 
-    drop_shadow = no
+    drop_shadow = yes
+    shadow_range = 20
+    col.shadow = rgba(0000004d)
 }
 
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    # Some default animations,  see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = easeOutQuint, 0.19, 1, 0.22, 1
 
     animation = windows, 1, 7, easeOutQuint, popin 40%
     animation = windowsOut, 1, 7, easeOutQuint, popin 80%
     animation = workspaces, 1, 6, easeOutQuint
+    animation = fade, 1, 5, default
 }
 
 master {
@@ -102,8 +105,10 @@ xwayland {
 
 # Window Rules
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.*
-# windowrulev2 = center, class:.*
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = center, class:.*, xwayland:0
+windowrulev2 = size 80% 75%, floating:1, xwayland:0
+layerrule = animation popin 96%, rofi
 
 # Mpv
 windowrulev2 = float, class:^(mpv)$
@@ -111,24 +116,25 @@ windowrulev2 = float, class:^(mpv)$
 # Keybindings
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = SUPER, Q, exec, $terminal
-bind = SUPER, C, killactive, 
+bind = SUPER, C, killactive,
 bind = SUPER, E, exec, $fileManager
-bind = SUPER, V, togglefloating, 
+bind = SUPER, V, togglefloating,
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, P, exec, ~/.config/hypr/scripts/power_menu.sh
+bind = SUPER, TAB, exec, rofi -show window
 
 # Master-Layout
 bind = SUPER, j, layoutmsg, cyclenext
 bind = SUPER, k, layoutmsg, cycleprev
-bind = SUPER_SHIFT, j, layoutmsg, swapnext
-bind = SUPER_SHIFT, k, layoutmsg, swapprev
+bind = SUPER SHIFT, j, layoutmsg, swapnext
+bind = SUPER SHIFT, k, layoutmsg, swapprev
 binde = SUPER, h, resizeactive, -50 0
 binde = SUPER, l, resizeactive, 50 0
 
 # Screenshot
 bind = , Print, exec, grim - | satty --fullscreen --copy-command wl-copy -f -
-bind = SHIFT, Print, exec, grim -g "$(slurp)" - | satty --copy-command wl-copy --filename -
+bind = SHIFT, Print, exec,  grim -g "$(slurp)" - | satty --copy-command wl-copy -f -
 
 # Audio
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
@@ -153,20 +159,20 @@ bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = SUPER_SHIFT, 1, movetoworkspace, 1
-bind = SUPER_SHIFT, 2, movetoworkspace, 2
-bind = SUPER_SHIFT, 3, movetoworkspace, 3
-bind = SUPER_SHIFT, 4, movetoworkspace, 4
-bind = SUPER_SHIFT, 5, movetoworkspace, 5
-bind = SUPER_SHIFT, 6, movetoworkspace, 6
-bind = SUPER_SHIFT, 7, movetoworkspace, 7
-bind = SUPER_SHIFT, 8, movetoworkspace, 8
-bind = SUPER_SHIFT, 9, movetoworkspace, 9
-bind = SUPER_SHIFT, 0, movetoworkspace, 10
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = SUPER, S, togglespecialworkspace, magic
-bind = SUPER_SHIFT, S, movetoworkspace, special:magic
+bind = SUPER SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = SUPER, mouse_down, workspace, e-1
