--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,8 @@
 shell fish
+# shell zsh
 
-font_size 14.5
-font_family JetBrains Mono
+font_size 17
+font_family Iosevka Term
 disable_ligatures cursor
 
 mouse_hide_wait 0
