--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,13 +2,10 @@
 monitor=,preferred,auto,2
 
 # Execute your favorite apps at launch
-exec-once = hyprpaper & waybar
+exec-once = hyprpaper & waybar & nm-applet
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
-
-# Sources
-source = ~/.config/hypr/imports/mocha.conf
 
 # Set programs that you use
 $terminal = kitty
@@ -43,8 +40,8 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 1
-    col.active_border = rgb($maroonAlpha)
-    col.inactive_border = rgb($surface0Alpha)
+    col.active_border = rgb(eba0ac)
+    col.inactive_border = rgb(45475a)
 
     layout = master
 
@@ -61,7 +58,7 @@ decoration {
 
     drop_shadow = yes
     shadow_range = 20
-    col.shadow = rgba(0000004d)
+    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -107,7 +104,6 @@ xwayland {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = center, class:.*, xwayland:0
-windowrulev2 = size 80% 75%, floating:1, xwayland:0
 layerrule = animation popin 96%, rofi
 
 # Mpv
