--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,14 +2,13 @@
 monitor=,preferred,auto,2
 
 # Execute your favorite apps at launch
-exec-once = hyprpaper & waybar & nm-applet
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = hyprpaper & waybar & nm-applet & blueman-applet & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
 # Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
+$terminal = wezterm
+$fileManager = thunar
 $menu = rofi -show drun
 
 # Some default env vars
@@ -58,7 +57,7 @@ decoration {
 
     drop_shadow = yes
     shadow_range = 20
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba(00000066)
 }
 
 animations {
@@ -103,11 +102,11 @@ xwayland {
 # Window Rules
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = center, class:.*, xwayland:0
-layerrule = animation popin 96%, rofi
+#layerrule = animation popin 96%, rofi
 
 # Mpv
 windowrulev2 = float, class:^(mpv)$
+windowrulev2 = center, class:^(mpv)$
 
 # Keybindings
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
@@ -129,8 +128,8 @@ binde = SUPER, h, resizeactive, -50 0
 binde = SUPER, l, resizeactive, 50 0
 
 # Screenshot
-bind = , Print, exec, grim - | satty --fullscreen --copy-command wl-copy -f -
-bind = SHIFT, Print, exec,  grim -g "$(slurp)" - | satty --copy-command wl-copy -f -
+bind = , Print, exec, grim - | wl-copy
+bind = SHIFT, Print, exec,  grim -g "$(slurp)" - | wl-copy
 
 # Audio
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1.0
