kitty: change to jetbrains mono

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,12 +1,11 @@
 shell fish
 # shell zsh
 
-font_size 17
-font_family Iosevka Term
+font_family JetBrains Mono
+font_size 15.7
 disable_ligatures cursor
 
 mouse_hide_wait 0
-strip_trailing_spaces smart
 
 sync_to_monitor no
 input_delay 1
