--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,15 +1,16 @@
 shell fish
 # shell zsh
 
-font_family JetBrains Mono
-font_size 15.7
+font_family Iosevka Term
+symbol_map U+f002,U+e27d Symbols Nerd Font
+font_size 16.75
 disable_ligatures cursor
 
 mouse_hide_wait 0
 
 sync_to_monitor no
-input_delay 1
 
+tab_bar_edge top
 tab_bar_align center
 tab_bar_style separator
 tab_separator ""
