--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,19 +1,28 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,2
 
-# Execute your favorite apps at launch
-exec-once = hyprpaper & waybar & nm-applet & blueman-applet & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# Autostart script
+exec = ~/.config/hypr/scripts/autostart.sh
+
+# Fix backlight at startup
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
-# Set programs that you use
-$terminal = wezterm
+# Start gnome-keyring
+exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
+exec-once = gnome-keyring-daemon --start --components=secrets
+
+# Default programs
+$terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
 
-# Some default env vars
+# Environment variables
 env = XCURSOR_SIZE,24
 env = GDK_SCALE,2
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = SDL_VIDEODRIVER,wayland
+env = SDL_DYNAMIC_API,/usr/lib64/libSDL2-2.0.so
 
 # Variables
 # See https://wiki.hyprland.org/Configuring/Variables/
@@ -36,34 +45,37 @@ device {
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 1
+    gaps_in = 3
+    gaps_out = 6
+    border_size = 2
     col.active_border = rgb(eba0ac)
     col.inactive_border = rgb(45475a)
+
+    resize_on_border = true
 
     layout = master
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 }
 
 decoration {
-    rounding = 10
+    rounding = 6
 
     blur {
         enabled = no
     }
 
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 20
     col.shadow = rgba(00000066)
 }
 
+
 animations {
+    # See https://wiki.hyprland.org/Configuring/Animations/ for more
     enabled = yes
 
-    # Some default animations,  see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = easeOutQuint, 0.19, 1, 0.22, 1
 
     animation = windows, 1, 7, easeOutQuint, popin 40%
@@ -89,6 +101,9 @@ misc {
     disable_hyprland_logo = true
     force_default_wallpaper = 0
     new_window_takes_over_fullscreen = 2
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
+    disable_autoreload = true
 }
 
 binds {
@@ -102,7 +117,9 @@ xwayland {
 # Window Rules
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-#layerrule = animation popin 96%, rofi
+
+# Rofi
+layerrule = animation popin 98%, rofi
 
 # Mpv
 windowrulev2 = float, class:^(mpv)$
@@ -116,7 +133,7 @@ bind = SUPER, E, exec, $fileManager
 bind = SUPER, V, togglefloating,
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
-bind = SUPER, P, exec, ~/.config/hypr/scripts/power_menu.sh
+bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
 bind = SUPER, TAB, exec, rofi -show window
 
 # Master-Layout
@@ -138,8 +155,8 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Backlight
-binde = , XF86MonBrightnessUp, exec, brightnessctl set +1%
-binde = , XF86MonBrightnessDown, exec, brightnessctl set 1%-
+binde = , XF86MonBrightnessUp, exec, brightnessctl -e set +1%
+binde = , XF86MonBrightnessDown, exec, brightnessctl -e set 1%-
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER, 1, workspace, 1
