--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,3 +1,6 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-decoration-layout=menu:
+gtk-theme-name=Materia-dark
+gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=Inter 11
+gtk-xft-hintstyle=hintnone
+gtk-application-prefer-dark-theme=1
