--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 shell fish
 # shell zsh
 
-font_family Iosevka Term
-symbol_map U+f002,U+e27d Symbols Nerd Font
-font_size 16.75
+font_family JetBrains Mono
+symbol_map U+f002,U+e27d,U+e271 Symbols Nerd Font
+font_size 20
 disable_ligatures cursor
 
 mouse_hide_wait 0
