--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,2
+monitor=,preferred,auto,1
+
+source=~/.config/hypr/imports/mocha.conf
 
 # Autostart script
 exec = ~/.config/hypr/scripts/autostart.sh
@@ -19,10 +21,7 @@ $menu = rofi -show drun
 
 # Environment variables
 env = XCURSOR_SIZE,24
-env = GDK_SCALE,2
 env = QT_QPA_PLATFORMTHEME,qt5ct
-env = SDL_VIDEODRIVER,wayland
-env = SDL_DYNAMIC_API,/usr/lib64/libSDL2-2.0.so
 
 # Variables
 # See https://wiki.hyprland.org/Configuring/Variables/
@@ -44,19 +43,24 @@ device {
     accel_profile = flat
 }
 
+device {
+    name = steelseries-steelseries-rival-3
+    accel_profile = flat
+}
+
 general {
     gaps_in = 3
     gaps_out = 6
     border_size = 2
-    col.active_border = rgb(eba0ac)
-    col.inactive_border = rgb(45475a)
+    col.active_border = rgb($sapphire)
+    col.inactive_border = rgb($surface1)
 
     resize_on_border = true
 
     layout = master
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = true
+    allow_tearing = false
 }
 
 decoration {
@@ -67,8 +71,9 @@ decoration {
     }
 
     drop_shadow = no
-    shadow_range = 20
-    col.shadow = rgba(00000066)
+    shadow_range = 40
+    shadow_render_power = 3
+    col.shadow = rgba(0000004d)
 }
 
 
@@ -132,7 +137,8 @@ bind = SUPER, C, killactive,
 bind = SUPER, E, exec, $fileManager
 bind = SUPER, V, togglefloating,
 bind = SUPER, R, exec, $menu
-bind = SUPER, F, fullscreen, 0
+bind = SUPER, F, fullscreen, 1
+bind = SUPER SHIFT, F, fullscreen, 0
 bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
 bind = SUPER, TAB, exec, rofi -show window
 
@@ -193,3 +199,6 @@ bind = SUPER, mouse_up, workspace, e+1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
+
+source=~/.config/hypr/imports/archpc.conf
+#source=~/.config/hypr/imports/archlaptop.conf
