--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,60 +1,92 @@
 {
-	"layer": "top", // Waybar at top layer
-	"height": 32, // Waybar height (to be removed for auto height)
-	"spacing": 4, // Gaps between modules (4px)
-	"modules-left": ["hyprland/workspaces"],
-	"modules-center": ["clock"],
-	"modules-right": [
-		"pulseaudio",
-		"backlight",
-		"battery",
-		"tray"
-	],
-	// Modules configuration
-	"hyprland/workspaces": {
-		"show-special": true,
-		"format": "{icon}",
-		"format-icons": {
-			"special": "󰫢"
-		},
-	},
-	"tray": {
-		"spacing": 10
-	},
-	"clock": {
-		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-		"format": "{:%e de %b  %H:%M}",
-	},
-	"battery": {
-		"states": {
-			"warning": 30,
-			"critical": 20
-		},
-		"tooltip-format": "Tiempo restante: {time}",
-		"format": "{icon} {capacity}%",
-		"format-charging": "󰚥 {capacity}%",
-		"format-alt": "{icon} {time}",
-		"format-icons": ["", "", "", "", ""]
-	},
-	"backlight": {
-		"tooltip-format": "Brillo: {percent}%",
-		"format": "{icon} {percent}%",
-		"format-icons": ["", "", "", "", "", "", "", "", ""]
-	},
-	"network": {
-		"format-wifi": "{icon} {signalStrength}%",
-		"tooltip-format": "{essid} en {gwaddr}",
-		"format-disconnected": " Desconectado",
-		"format-icons": ["󰤟", "󰤢", "󰤥", "󰤨"]
-	},
-	"pulseaudio": {
-		"format": "{icon} {volume}%",
-		"format-muted": "󰝟",
-		"format-icons": {
-			"headphone": "",
-			"headset": "󰋎",
-			"default": ["", "", ""]
-		},
-		"on-click": "pavucontrol"
-	},
+    "layer": "top", // Waybar at top layer
+    "height": 40, // Waybar height (to be removed for auto height)
+    "spacing": 10, // Gaps between modules (4px)
+    "modules-left": [
+        "hyprland/workspaces",
+        "hyprland/window"
+    ],
+    "modules-center": [],
+    "modules-right": [
+        "tray",
+        "pulseaudio",
+        "backlight",
+        "battery",
+        "clock"
+    ],
+    // Modules configuration
+    "hyprland/workspaces": {
+        "show-special": true,
+        "format": "{icon}",
+        "format-icons": {
+            "special": "󰫢"
+        }
+    },
+    "hyprland/window": {
+        "separate-outputs": true
+    },
+    "tray": {
+        "spacing": 10
+    },
+    "clock": {
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%e de %b  %H:%M}"
+    },
+    "battery": {
+        "states": {
+            "warning": 30,
+            "critical": 20
+        },
+        "tooltip-format": "Tiempo restante: {time}",
+        "format": "{icon} {capacity}%",
+        "format-charging": "󰚥 {capacity}%",
+        "format-alt": "{icon} {time}",
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
+    },
+    "backlight": {
+        "tooltip-format": "Brillo: {percent}%",
+        "format": "{icon} {percent}%",
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
+    },
+    "network": {
+        "format-wifi": "{icon} {signalStrength}%",
+        "tooltip-format": "{essid} en {gwaddr}",
+        "format-disconnected": " Desconectado",
+        "format-icons": [
+            "󰤟",
+            "󰤢",
+            "󰤥",
+            "󰤨"
+        ]
+    },
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "format-muted": "󰝟",
+        "format-icons": {
+            "headphone": "",
+            "headset": "󰋎",
+            "default": [
+                "",
+                "",
+                ""
+            ]
+        },
+        "on-click": "pavucontrol"
+    }
 }
