--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Imágenes/elpepe.png
-wallpaper = ,~/Imágenes/elpepe.png
+preload = ~/Imágenes/Wallpapers/nose.png
+wallpaper = ,~/Imágenes/Wallpapers/nose.png
 splash = false
