--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,5 +1,15 @@
+general {
+    before_sleep_cmd = hyprlock
+    lock_cmd = hyprlock
+}
+
 listener {
     timeout = 30
     on-timeout = brightnessctl -s set 10
     on-resume = brightnessctl -r
+}
+
+listener {
+    timeout = 9000 # 15min
+    on-timeout = systemctl suspend
 }
