--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 shell fish
 # shell zsh
 
-font_family JetBrains Mono
+font_family Iosevka Term
 symbol_map U+f002,U+e27d,U+e271 Symbols Nerd Font
-font_size 20
+font_size 17.5
 disable_ligatures cursor
 
 mouse_hide_wait 0
