--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=,preferred,auto,2
 
+# Import mocha colorscheme
 source=~/.config/hypr/imports/mocha.conf
 
 # Autostart script
@@ -16,11 +17,12 @@ exec-once = gnome-keyring-daemon --start --components=secrets
 
 # Default programs
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = rofi -show drun
 
 # Environment variables
 env = XCURSOR_SIZE,24
+env = GDK_SCALE,2
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # Variables
@@ -106,8 +108,6 @@ misc {
     disable_hyprland_logo = true
     force_default_wallpaper = 0
     new_window_takes_over_fullscreen = 2
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
     disable_autoreload = true
 }
 
@@ -131,7 +131,7 @@ layerrule = animation popin 98%, rofi
 bind = SUPER, Q, exec, $terminal
 bind = SUPER, C, killactive,
 bind = SUPER, E, exec, $fileManager
-bind = SUPER, V, togglefloating,
+bind = SUPER, space, togglefloating,
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 1
 bind = SUPER SHIFT, F, fullscreen, 0
@@ -195,6 +195,3 @@ bind = SUPER, mouse_up, workspace, e+1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
-
-source=~/.config/hypr/imports/archpc.conf
-#source=~/.config/hypr/imports/archlaptop.conf
