--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -104,6 +104,8 @@ gestures {
 }
 
 misc {
+    enable_swallow = true
+    swallow_regex = ^(kitty)$
     disable_splash_rendering = true
     disable_hyprland_logo = true
     force_default_wallpaper = 0
