--- a/config/starship.toml
+++ b/config/starship.toml
@@ -19,7 +19,6 @@ $character"""
 [directory]
 read_only = ' 󰌾'
 truncation_length = 0
-style = 'bold blue'
 
 [git_commit]
 tag_disabled = false
@@ -31,7 +30,7 @@ format = '[$status]($style) '
 style = 'bold bright-red'
 
 [character]
+#success_symbol = '❱'
+#error_symbol = '[❱](bright-red)'
 success_symbol = '[>](bold)'
 error_symbol = '[>](bold bright-red)'
-#success_symbol = '❯'
-#error_symbol = '[❯](bright-red)'
