--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -32,6 +32,8 @@ input {
 
     follow_mouse = 1
 
+    accel_profile = flat
+
     touchpad {
         natural_scroll = yes
         tap-to-click = false
@@ -41,13 +43,8 @@ input {
 }
 
 device {
-    name = logitech-m350-1
-    accel_profile = flat
-}
-
-device {
-    name = steelseries-steelseries-rival-3
-    accel_profile = flat
+    name = asue140d:00-04f3:31b9-touchpad
+    accel_profile = adaptive
 }
 
 general {
@@ -85,16 +82,16 @@ animations {
 
     bezier = easeOutQuint, 0.19, 1, 0.22, 1
 
-    animation = windows, 1, 7, easeOutQuint, popin 40%
-    animation = windowsOut, 1, 7, easeOutQuint, popin 80%
-    animation = workspaces, 1, 6, easeOutQuint
+    animation = windows, 1, 7, easeOutQuint, slide
+    animation = windowsOut, 1, 7, easeOutQuint, slide
+    animation = workspaces, 1, 6, easeOutQuint, slidefade
     animation = fade, 1, 5, default
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
     new_on_top = true
 }
 
