--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -9,7 +9,7 @@ label {
     text = $TIME
     color = rgb(cdd6f4)
     font_size = 220
-    font_family = Inter Bold
+    font_family = Iosevka Bold
 
     position = 0, 300
     halign = center
