--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,12 +2,13 @@ shell fish
 # shell zsh
 
 font_family Iosevka Term
-symbol_map U+f002,U+e27d,U+e271 Symbols Nerd Font
+symbol_map U+f002,U+e27d,U+e271,U+e244 Symbols Nerd Font
 font_size 17.5
 disable_ligatures cursor
 
 mouse_hide_wait 0
 
+input_delay 1
 sync_to_monitor no
 
 tab_bar_edge top
