--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -3,5 +3,5 @@ import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
 shell = "fish"
 
 [font]
-normal = {family = "JetBrains Mono"}
-size = 14.5
+normal = {family = "Iosevka Term"}
+size = 16
