hyprland: disable workspace slidefade

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -84,7 +84,7 @@ animations {
 
     animation = windows, 1, 7, easeOutQuint, slide
     animation = windowsOut, 1, 7, easeOutQuint, slide
-    animation = workspaces, 1, 6, easeOutQuint, slidefade
+    animation = workspaces, 1, 6, easeOutQuint
     animation = fade, 1, 5, default
 }
 
