Prepare to reinstall (😭)

--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
-    before_sleep_cmd = hyprlock
-    lock_cmd = hyprlock
+    lock_cmd = pidof hyprlock || hyprlock
+    before_sleep_cmd = loginctl lock-session
 }
 
 listener {
@@ -10,6 +10,6 @@ listener {
 }
 
 listener {
-    timeout = 9000 # 15min
+    timeout = 900 # 15min
     on-timeout = systemctl suspend
 }
