--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,17 +1,21 @@
 background {
     path = ~/Imágenes/Wallpapers/nose.png
 
-    blur_passes = 5
-    brightness = 1
+    blur_passes = 3
+    noise = 0.0117
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
 }
 
 label {
     text = $TIME
     color = rgb(cdd6f4)
-    font_size = 220
-    font_family = Iosevka Bold
+    font_size = 200
+    font_family = Inter Bold
 
-    position = 0, 300
+    position = 0, 400
     halign = center
     valign = center
 
@@ -20,13 +24,20 @@ label {
 }
 
 input-field {
-    size = 425, 150
+    size = 350, 125
     position = 0, -200
     placeholder_text =
+    fail_text =
     outer_color = rgb(45475a)  # surface1
     inner_color = rgb(1e1e2e)  # base
     font_color = rgb(cdd6f4)   # text
     check_color = rgb(fab387)  # peach
     fail_color = rgb(f38ba8)   # peach
     outline_thickness = 2
+    shadow_passes = 1
+    shadow_size = 10
+    shadow_boost = 0.5
+    dots_size = 0.34
+    dots_center = false
+    rounding = 24
 }
