--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,32 +1,149 @@
+# This is an example Hyprland config file.
+# Refer to the wiki for more information.
+# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
+
+# Please note not all available settings / options are set here.
+# For a full list, see the wiki
+
+# You can split this configuration into multiple files
+# Create your files separately and then link them to this file like this:
+source = ~/.config/hypr/hyprland.d/mocha.conf
+
+
+################
+### MONITORS ###
+################
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,2
+monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,0x0,2
+monitor=HDMI-A-1,preferred,-500x-1440,auto,vrr,1
 
-# Import mocha colorscheme
-source=~/.config/hypr/imports/mocha.conf
 
-# Autostart script
-exec = ~/.config/hypr/scripts/autostart.sh
+###################
+### MY PROGRAMS ###
+###################
 
-# Fix backlight at startup
+# See https://wiki.hyprland.org/Configuring/Keywords/
+
+# Set programs that you use
+$terminal = kitty
+# $fileManager = thunar
+$menu = rofi -show drun -show-icons
+
+
+#################
+### AUTOSTART ###
+#################
+
+# Autostart necessary processes (like notifications daemons, status bars, etc.)
+# Or execute your favorite apps at launch like this:
+
 exec-once = brightnessctl set +1%
 exec-once = brightnessctl set 1%-
 
-# Start gnome-keyring
 exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
 exec-once = gnome-keyring-daemon --start --components=secrets
 
-# Default programs
-$terminal = kitty
-$fileManager = nautilus
-$menu = rofi -show drun
+exec = ~/.config/hypr/hyprland.d/scripts/autostart.sh
 
-# Environment variables
+
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+
+# See https://wiki.hyprland.org/Configuring/Environment-variables/
+
 env = XCURSOR_SIZE,24
-env = GDK_SCALE,2
+env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
-# Variables
-# See https://wiki.hyprland.org/Configuring/Variables/
+
+#####################
+### LOOK AND FEEL ###
+#####################
+
+# Refer to https://wiki.hyprland.org/Configuring/Variables/
+
+# https://wiki.hyprland.org/Configuring/Variables/#general
+general {
+    gaps_in = 3
+    gaps_out = 10
+
+    border_size = 2
+
+    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+    col.active_border = rgb($sapphire)
+    col.inactive_border = rgb($surface1)
+
+    # Set to true enable resizing windows by clicking and dragging on borders and gaps
+    resize_on_border = false
+
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    allow_tearing = false
+
+    layout = master
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#decoration
+decoration {
+    rounding = 6
+
+    # Change transparency of focused and unfocused windows
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+
+    drop_shadow = false
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
+
+    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    blur {
+        enabled = false
+        size = 3
+        passes = 1
+
+        vibrancy = 0.1696
+    }
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#animations
+animations {
+    enabled = true
+
+    # See https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = easeOutQuint, 0.22, 1, 0.36, 1
+
+    animation = windows, 1, 5, easeOutQuint, slide
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 6, default
+    animation = layers, 1, 2, default
+    animation = workspaces, 1, 5, easeOutQuint
+}
+
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+master {
+    new_is_master = true
+    no_gaps_when_only = true
+    new_on_top = true
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+    disable_hyprland_logo = true
+    disable_autoreload = true
+    background_color = 0x000000
+}
+
+
+#############
+### INPUT ###
+#############
+
+# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = es
 
@@ -42,108 +159,64 @@ input {
     }
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#gestures
+gestures {
+    workspace_swipe = false
+}
+
 device {
     name = asue140d:00-04f3:31b9-touchpad
     accel_profile = adaptive
 }
 
-general {
-    gaps_in = 3
-    gaps_out = 6
-    border_size = 2
-    col.active_border = rgb($sapphire)
-    col.inactive_border = rgb($surface1)
+####################
+### KEYBINDINGSS ###
+####################
 
-    resize_on_border = true
+# See https://wiki.hyprland.org/Configuring/Keywords/
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
-    layout = master
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-}
-
-decoration {
-    rounding = 6
-
-    blur {
-        enabled = no
-    }
-
-    drop_shadow = no
-    shadow_range = 40
-    shadow_render_power = 3
-    col.shadow = rgba(0000004d)
-}
-
-
-animations {
-    # See https://wiki.hyprland.org/Configuring/Animations/ for more
-    enabled = yes
-
-    bezier = easeOutQuint, 0.19, 1, 0.22, 1
-
-    animation = windows, 1, 7, easeOutQuint, slide
-    animation = windowsOut, 1, 7, easeOutQuint, slide
-    animation = workspaces, 1, 6, easeOutQuint
-    animation = fade, 1, 5, default
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-    # no_gaps_when_only = 1
-    new_on_top = true
-}
-
-gestures {
-    workspace_swipe = on
-    workspace_swipe_cancel_ratio = 0.15
-}
-
-misc {
-    enable_swallow = true
-    swallow_regex = ^(kitty)$
-    disable_splash_rendering = true
-    disable_hyprland_logo = true
-    force_default_wallpaper = 0
-    new_window_takes_over_fullscreen = 2
-    disable_autoreload = true
-}
-
-binds {
-    scroll_event_delay = 50
-}
-
-xwayland {
-    force_zero_scaling = true
-}
-
-# Window Rules
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-# Rofi
-layerrule = animation popin 98%, rofi
-
-# Keybindings
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = SUPER, Q, exec, $terminal
-bind = SUPER, C, killactive,
-bind = SUPER, E, exec, $fileManager
-bind = SUPER, space, togglefloating,
-bind = SUPER, R, exec, $menu
-bind = SUPER, F, fullscreen, 1
-bind = SUPER SHIFT, F, fullscreen, 0
-bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
-bind = SUPER, TAB, exec, rofi -show window
+bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, C, killactive,
+# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, Space, togglefloating,
+bind = $mainMod, R, exec, $menu
+bind = $mainMod, F, fullscreen, 0
+bind = $mainMod, P, exec, ~/.config/hypr/hyprland.d/scripts/command_palette.sh
+bind = $mainMod, TAB, exec, rofi -show window -show-icons
 
 # Master-Layout
-bind = SUPER, j, layoutmsg, cyclenext
-bind = SUPER, k, layoutmsg, cycleprev
-bind = SUPER SHIFT, j, layoutmsg, swapnext
-bind = SUPER SHIFT, k, layoutmsg, swapprev
-binde = SUPER, h, resizeactive, -50 0
-binde = SUPER, l, resizeactive, 50 0
+bind = $mainMod, j, layoutmsg, cyclenext
+bind = $mainMod, k, layoutmsg, cycleprev
+bind = $mainMod SHIFT, j, layoutmsg, swapnext
+bind = $mainMod SHIFT, k, layoutmsg, swapprev
+binde = $mainMod, h, resizeactive, -50 0
+binde = $mainMod, l, resizeactive, 50 0
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Screenshot
 bind = , Print, exec, grim - | wl-copy
@@ -159,38 +232,33 @@ bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 binde = , XF86MonBrightnessUp, exec, brightnessctl -e set +1%
 binde = , XF86MonBrightnessDown, exec, brightnessctl -e set 1%-
 
-# Switch workspaces with mainMod + [0-9]
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = SUPER, S, togglespecialworkspace, magic
-bind = SUPER SHIFT, S, movetoworkspace, special:magic
+# Special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = SUPER, mouse_down, workspace, e-1
-bind = SUPER, mouse_up, workspace, e+1
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = SUPER, mouse:272, movewindow
-bindm = SUPER, mouse:273, resizewindow
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+layerrule = animation slide right, rofi
+
+source = ~/.config/hypr/hyprland.d/second_monitor.conf
