--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,29 +1,29 @@
 shell fish
-# shell zsh
 
-font_family Iosevka Term
+shell_integration no-sudo
+
+font_family JetBrains Mono
 symbol_map U+f002,U+e27d,U+e271,U+e244 Symbols Nerd Font
-font_size 17.5
+font_size 15
 disable_ligatures cursor
 
 mouse_hide_wait 0
 
-input_delay 1
-sync_to_monitor no
+wayland_enable_ime no
 
 tab_bar_edge top
-tab_bar_align center
 tab_bar_style separator
 tab_separator ""
 tab_title_template "  {index}:{title}  "
 tab_switch_strategy right
 
-map ctrl+shift+enter no_op
 map ctrl+shift+t new_tab_with_cwd
+# I don't use splits
+map ctrl+shift+enter no_op
 
-map ctrl+plus change_font_size all +2.0
-map ctrl+minus change_font_size all -2.0
 map ctrl+0 change_font_size all 0
+map ctrl+minus change_font_size all -2.0
+map ctrl+plus change_font_size all +2.0
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
