--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,7 +7,7 @@
 
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
-source = ~/.config/hypr/hyprland.d/mocha.conf
+source = ~/.config/hypr/hyprland.d/kanagawa.conf
 
 
 ################
@@ -17,7 +17,6 @@ source = ~/.config/hypr/hyprland.d/mocha.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 monitor=eDP-1,preferred,0x0,2
-monitor=HDMI-A-1,preferred,-500x-1440,auto,vrr,1
 
 
 ###################
@@ -58,6 +57,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
+env = GDK_SCALE,2
 
 #####################
 ### LOOK AND FEEL ###
@@ -73,8 +73,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb($sapphire)
-    col.inactive_border = rgb($surface1)
+    col.active_border = rgb($active_border)
+    col.inactive_border = rgb($border)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -131,11 +131,18 @@ master {
     new_on_top = true
 }
 
+xwayland {
+    force_zero_scaling = true
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     disable_hyprland_logo = true
     disable_autoreload = true
     background_color = 0x000000
+    focus_on_activate = true
+    new_window_takes_over_fullscreen = 2
+    middle_click_paste = false
 }
 
 
@@ -161,7 +168,8 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = on
+    workspace_swipe_cancel_ratio = 0.15
 }
 
 device {
@@ -185,6 +193,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, P, exec, ~/.config/hypr/hyprland.d/scripts/command_palette.sh
 bind = $mainMod, TAB, exec, rofi -show window -show-icons
+bind = $mainMod, period, exec, rofi -show emoji
 
 # Master-Layout
 bind = $mainMod, j, layoutmsg, cyclenext
@@ -259,6 +268,11 @@ bindm = $mainMod, mouse:273, resizewindow
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = rounding 0, title:^(Picture-in-Picture)$
+
 layerrule = animation slide right, rofi
 
-source = ~/.config/hypr/hyprland.d/second_monitor.conf
+#source = ~/.config/hypr/hyprland.d/second_monitor.conf
