--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,7 +1,8 @@
 background {
-    path = ~/Imágenes/Wallpapers/nose.png
+    path = ~/Imágenes/Wallpapers/cactus.png
 
     blur_passes = 3
+    blur_size = 2
     noise = 0.0117
     contrast = 0.8916
     brightness = 0.8172
@@ -11,7 +12,7 @@ background {
 
 label {
     text = $TIME
-    color = rgb(cdd6f4)
+    color = rgb(DCD7BA)
     font_size = 200
     font_family = Inter Bold
 
@@ -28,16 +29,15 @@ input-field {
     position = 0, -200
     placeholder_text =
     fail_text =
-    outer_color = rgb(45475a)  # surface1
-    inner_color = rgb(1e1e2e)  # base
-    font_color = rgb(cdd6f4)   # text
-    check_color = rgb(fab387)  # peach
-    fail_color = rgb(f38ba8)   # peach
+    outer_color = rgb(363646)  # surface1
+    inner_color = rgb(1F1F28)  # base
+    font_color = rgb(DCD7BA)   # text
+    check_color = rgb(E6C384)  # peach
+    fail_color = rgb(FF5D62)   # peach
     outline_thickness = 2
     shadow_passes = 1
     shadow_size = 10
     shadow_boost = 0.5
     dots_size = 0.34
-    dots_center = false
     rounding = 24
 }
