--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,9 +2,9 @@ shell fish
 
 shell_integration no-sudo
 
-font_family JetBrains Mono
-symbol_map U+f002,U+e27d,U+e271,U+e244 Symbols Nerd Font
-font_size 15
+font_family Iosevka Term
+symbol_map U+f002,U+e27d,U+e271,U+e244,U+e275 Symbols Nerd Font
+font_size 17
 disable_ligatures cursor
 
 mouse_hide_wait 0
@@ -38,4 +38,4 @@ map alt+0 goto_tab 10
 
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
-include ./Catppuccin-Mocha.conf
+include ./kanagawa.conf
