--- a/config/hypr/hyprland.d/second_monitor.conf
+++ b/config/hypr/hyprland.d/second_monitor.conf
@@ -1,3 +1,7 @@
+# Monitor
+monitor=HDMI-A-1,preferred,-500x-1440,auto,vrr,1
+
+# Workspace rules
 workspace = 1, monitor:HDMI-A-1
 workspace = 2, monitor:HDMI-A-1
 workspace = 3, monitor:HDMI-A-1
