Update hypr config

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,3 +1,7 @@
+general {
+    ignore_empty_input = true
+}
+
 background {
     path = ~/Imágenes/Wallpapers/cactus.png
 
@@ -11,33 +15,63 @@ background {
 }
 
 label {
-    text = $TIME
+    text = cmd[update:1000] echo -e "$(date +'%H')"
     color = rgb(DCD7BA)
-    font_size = 200
-    font_family = Inter Bold
+    font_size = 175
+    font_family = AlfaSlabOne
 
-    position = 0, 400
+    position = 0, -100
     halign = center
-    valign = center
+    valign = top
+
+    shadow_passes = 1
+    shadow_size = 10
+}
+
+label {
+    text = cmd[update:1000] echo -e "$(date +'%M')"
+    color = rgb(DCD7BA)
+    font_size = 175
+    font_family = AlfaSlabOne
+
+    position = 0, -325
+    halign = center
+    valign = top
+
+    shadow_passes = 1
+    shadow_size = 10
+}
+
+label {
+    text = cmd[update:0:1] echo $(date +"%A, %d %B")
+    color = rgb(C8C093)
+    font_size = 30
+    font_family = Iosevka Semibold
+
+    position = 0, -625
+    halign = center
+    valign = top
 
     shadow_passes = 1
     shadow_size = 10
 }
 
 input-field {
-    size = 350, 125
-    position = 0, -200
+    size = 400, 125
+    position = 0, 150
+    valign = bottom
     placeholder_text =
     fail_text =
-    outer_color = rgb(363646)  # surface1
-    inner_color = rgb(1F1F28)  # base
-    font_color = rgb(DCD7BA)   # text
-    check_color = rgb(E6C384)  # peach
-    fail_color = rgb(FF5D62)   # peach
+    outer_color = rgb(363646)
+    inner_color = rgb(1F1F28)
+    font_color = rgb(DCD7BA)
+    check_color = rgb(E6C384)
+    fail_color = rgb(FF5D62)
     outline_thickness = 2
     shadow_passes = 1
     shadow_size = 10
     shadow_boost = 0.5
     dots_size = 0.34
-    rounding = 24
+    # dots_rounding = -2
+    # rounding = 24
 }
