--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=eDP-1,preferred,0x0,2
 
 # Set programs that you use
 $terminal = kitty
-# $fileManager = thunar
+$fileManager = $terminal -e yazi
 $menu = rofi -show drun -show-icons
 
 
@@ -126,7 +126,7 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+    new_status = master
     no_gaps_when_only = true
     new_on_top = true
 }
@@ -187,13 +187,13 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Space, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, P, exec, ~/.config/hypr/hyprland.d/scripts/command_palette.sh
 bind = $mainMod, TAB, exec, rofi -show window -show-icons
-bind = $mainMod, period, exec, rofi -show emoji
+bind = $mainMod, period, exec, rofimoji -r Emojis
 
 # Master-Layout
 bind = $mainMod, j, layoutmsg, cyclenext
