--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -38,4 +38,4 @@ map alt+0 goto_tab 10
 
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
-include ./kanagawa.conf
+include ./tokyonight_moon.conf
